// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preset impacts > snapshot ai1-alternate 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 132.31298199390767,
  "areaAvg340": 99.94605307345734,
  "bits": 165600000000000,
  "correctable": 0,
  "crossEstimate": true,
  "crossSection": 9.875916908015623e-21,
  "crossUnit": "cm2/bit",
  "die": 10350,
  "dieEstimate": true,
  "due": 0.008210401730214843,
  "fiveYearLabel": "source",
  "kwPerM2": 1.0909090909090908,
  "latchup": 0,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 66.66666666666667,
  "mcHigh": 0.016420803460429685,
  "mcLow": 0,
  "peakFlag": true,
  "sdc": 0,
  "storm": 1,
  "temperatureK": 332.9446339947818,
  "tid": 10,
  "tidEstimate": true,
  "upset": 0.008210401730214843,
}
`;

exports[`preset impacts > snapshot ai1-spacex 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 192.95643207444868,
  "areaAvg340": 145.75466073212527,
  "bits": 165600000000000,
  "correctable": 0,
  "crossEstimate": true,
  "crossSection": 9.875916908015623e-21,
  "crossUnit": "cm2/bit",
  "die": 10350,
  "dieEstimate": true,
  "due": 0.008210401730214843,
  "fiveYearLabel": "source",
  "kwPerM2": 1.09375,
  "latchup": 0,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 66.66666666666667,
  "mcHigh": 0.016420803460429685,
  "mcLow": 0,
  "peakFlag": true,
  "sdc": 0,
  "storm": 1,
  "temperatureK": 333.1330112710431,
  "tid": 10,
  "tidEstimate": true,
  "upset": 0.008210401730214843,
}
`;

exports[`preset impacts > snapshot custom 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 0,
  "areaAvg340": 0,
  "bits": 0,
  "correctable": 0,
  "crossEstimate": true,
  "crossSection": 1e-14,
  "crossUnit": "cm2/bit",
  "die": 0,
  "dieEstimate": true,
  "due": 0,
  "fiveYearLabel": "source",
  "kwPerM2": 0,
  "latchup": 0,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 66.66666666666667,
  "mcHigh": 0,
  "mcLow": 0,
  "peakFlag": false,
  "sdc": 0,
  "storm": 1,
  "temperatureK": 200,
  "tid": 10,
  "tidEstimate": true,
  "upset": 0,
}
`;

exports[`preset impacts > snapshot h100-starcloud 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 0,
  "areaAvg340": 0,
  "bits": 640000000000,
  "correctable": 0,
  "crossEstimate": true,
  "crossSection": 9.875916908015623e-21,
  "crossUnit": "cm2/bit",
  "die": 40,
  "dieEstimate": true,
  "due": 0.00003173102117957427,
  "fiveYearLabel": "source",
  "kwPerM2": 0,
  "latchup": 0,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 66.66666666666667,
  "mcHigh": 0.00006346204235914853,
  "mcLow": 0,
  "peakFlag": false,
  "sdc": 0,
  "storm": 1,
  "temperatureK": 200,
  "tid": 10,
  "tidEstimate": true,
  "upset": 0.00003173102117957427,
}
`;

exports[`preset impacts > snapshot orin-agx 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 0.055130409164128195,
  "areaAvg340": 0.04164418878060722,
  "bits": 512000000000,
  "correctable": 0,
  "crossEstimate": true,
  "crossSection": 9.875916908015623e-21,
  "crossUnit": "cm2/bit",
  "die": 32,
  "dieEstimate": true,
  "due": 0.000025384816943659415,
  "fiveYearLabel": "source",
  "kwPerM2": 0,
  "latchup": 0,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 126.66666666666667,
  "mcHigh": 0.00005076963388731883,
  "mcLow": 0,
  "peakFlag": false,
  "sdc": 0,
  "storm": 1,
  "temperatureK": 200,
  "tid": 19,
  "tidEstimate": false,
  "upset": 0.000025384816943659415,
}
`;

exports[`preset impacts > snapshot orin-nx 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 0.01653912274923846,
  "areaAvg340": 0.012493256634182166,
  "bits": 128000000000,
  "correctable": 8.835666506368221e-7,
  "crossEstimate": false,
  "crossSection": 3.52e-10,
  "crossUnit": "cm2",
  "die": 8,
  "dieEstimate": true,
  "due": 7.068533205094577e-7,
  "fiveYearLabel": "source",
  "kwPerM2": 0,
  "latchup": 0,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 66.66666666666667,
  "mcHigh": 0.0000017671333012736441,
  "mcLow": 0.0000017671333012736441,
  "peakFlag": false,
  "sdc": 1.7671333012736433e-7,
  "storm": 1,
  "temperatureK": 200,
  "tid": 10,
  "tidEstimate": true,
  "upset": 0.0000017671333012736441,
}
`;

exports[`preset impacts > snapshot samrh71 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 0,
  "areaAvg340": 0,
  "bits": 1024000,
  "correctable": 0.000046266762796982683,
  "crossEstimate": true,
  "crossSection": 1e-14,
  "crossUnit": "cm2/bit",
  "die": 0.000064,
  "dieEstimate": true,
  "due": 0.000004112601137509569,
  "fiveYearLabel": "source",
  "kwPerM2": 0,
  "latchup": 62.5,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 666.6666666666667,
  "mcHigh": 0.00010281502843773929,
  "mcLow": 0,
  "peakFlag": false,
  "sdc": 0.0000010281502843773924,
  "storm": 1,
  "temperatureK": 200,
  "tid": 100,
  "tidEstimate": false,
  "upset": 0.000051407514218869645,
}
`;

exports[`preset impacts > snapshot tpu-v6e 1`] = `
{
  "annual": 0.15,
  "areaAvg320": 0,
  "areaAvg340": 0,
  "bits": 256000000000,
  "correctable": 0,
  "crossEstimate": true,
  "crossSection": 9.875916908015623e-21,
  "crossUnit": "cm2/bit",
  "die": 16,
  "dieEstimate": true,
  "due": 0.000012692408471829707,
  "fiveYearLabel": "source",
  "kwPerM2": 0,
  "latchup": 0,
  "latchupLabel": "UNVERIFIED",
  "lifetime": 13.333333333333334,
  "mcHigh": 0.000025384816943659415,
  "mcLow": 0,
  "peakFlag": false,
  "sdc": 0,
  "storm": 1,
  "temperatureK": 200,
  "tid": 2,
  "tidEstimate": false,
  "upset": 0.000012692408471829707,
}
`;
